--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url("../src/images/pattern-background-desktop.svg");
+  background-image: url("/images/pattern-background-desktop.svg");
   background-color: hsl(225, 100%, 94%);
   background-repeat: repeat-x;
   font-family: "Red Hat Display", sans-serif;
