--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,9 @@ body {
   background-color: hsl(225, 100%, 94%);
   background-repeat: repeat-x;
   font-family: "Red Hat Display", sans-serif;
+}
+
+main {
   display: flex;
   flex-direction: row;
   justify-content: center;
